Added some CSS to the website

--- a/index.html
+++ b/index.html
@@ -5,6 +5,13 @@
   <!-- this is the part in html file that holds the information about the web page -->
   <meta charset="utf-8">
   <title>Or's Personal Website</title>
+
+    <!-- adding css to the Website under the <style></style> section -->
+    <!--adding css externally from an external css file -->
+  <link rel="stylesheet" href="css/styles.css">
+
+
+
 </head>
 
 <body>
